added class and iframe

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,43 +13,25 @@
 <body>
     <!-- Navi Area START -->
     <section id="nav-section">
-        <nav>
+        <nav class="desktop">
             <ul class="channel">
-                <li>
-                    <a href="https://sarnia.slack.com/">
-                        <img src="assets/img/ch1.png" alt="slack">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/groups/SarniaTech/">
-                        <img src="assets/img/ch2.png" alt="twitter">
-                    </a>
-                </li>
-                <!-- sarnia tech twitter placeholder-->
-                <li>
-                    <a href="https://www.facebook.com/groups/SarniaTech/">
-                        <img src="assets/img/ch3.png" alt="facebook">
-                    </a>
-                </li>
+                <li><a href="https://sarnia.slack.com/"><img src="assets/img/ch1.png" alt="slack"></a></li>
+                <li><a href="https://www.facebook.com/groups/SarniaTech/"><img src="assets/img/ch2.png" alt="twitter"></a></li><!-- sarnia tech twitter placeholder-->
+                <li><a href="https://www.facebook.com/groups/SarniaTech/"><img src="assets/img/ch3.png" alt="facebook"></a></li>
             </ul>
             <ul class="menu">
-                <li>
-                    <a href="#meeting-section">Meetings</a>
-                </li>
-                <li>
-                    <a href="#join-section">Join the Comunity</a>
-                </li>
-                <li>
-                    <a href="#family-section">Friends and Family</a>
-                </li>
+                <li><a href="#meeting-section">Meetings</a></li>          
+                <li><a href="#join-section">Join the Comunity</a></li>           
+                <li><a href="#family-section">Friends and Family</a></li> 
             </ul>
+        </nav> 
+        <nav class="mobile">
+            <img src="assets/img/menu.png" alt="menu">
         </nav>
-        <h1>
-            <img src="assets/img/logo.png" alt="logo">
-        </h1>
+        <h1><img src="assets/img/logo.png" alt="logo"></h1>
     </section>
     <!-- Navi Area END -->
-
+    
 
     <!-- Header Area START -->
     <section class="section is-medium" id="header-section">
@@ -60,8 +42,7 @@
             <div class="columns">
                 <div class="column is-8">
                     <h1 class="header-title">Helping Sarnia's Tech Community</h1>
-                    <h3 class="header-subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi exercitationem nam beatae dolor,
-                        <br/>consectetur velit provident </h3>
+                    <h3 class="header-subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi exercitationem nam beatae dolor, <br/>consectetur velit provident </h3>
                     <a href="" class="button header-button1">See Upcoming Events</a>
                 </div>
             </div>
@@ -72,19 +53,15 @@
 
     <!-- Meetings Area START -->
     <section class="is-large" id="meeting-section">
-        <div class="container">
+        <div class="container" >
             <div class="columns">
-                <div class="column">
-                    <img src="assets/img/main-img2.png" alt="meetings">
-                </div>
+                <div class="column"><img src="assets/img/main-img2.png" alt="meetings"></div>
                 <div class="column is-half text-right">
                     <h2 class="header-title">Meetings</h1>
-                        <h3 class="header-subtitle ">Our meetings are currently being held
-                            <br/> at The Story on Christina Street in Sarnia at 6PM
-                            <br/> For directions to
-                            <span class="blk">The Story.</span>
-                        </h3>
-                        <a href="" class="button header-button2">The Story Location</a>
+                    <h3 class="header-subtitle ">Our meetings are currently being held<br/>
+                    at The Story on Christina Street in Sarnia at 6PM<br/>
+                    For directions to <span class="blk">The Story.</span></h3>
+                    <a href="" class="button header-button2">The Story Location</a>
                 </div>
             </div>
         </div>
@@ -98,28 +75,23 @@
             <div class="columns">
                 <div class="column is-three-quarters">
                     <h2 class="header-title">Join the Community</h2>
-                    <a href="https://sarnia.slack.com/">
-                        <img src="assets/img/ch1-2.png" alt="slack">
-                    </a>
-                    <a href="https://www.facebook.com/groups/SarniaTech/">
-                        <img src="assets/img/ch2.png" alt="twitter">
-                    </a>
-                    <a href="https://www.facebook.com/groups/SarniaTech/">
-                        <img src="assets/img/ch3.png" alt="facebook">
-                    </a>
+                    <a href="https://sarnia.slack.com/"><img src="assets/img/ch1-2.png" alt="slack"></a>
+                    <a href="https://www.facebook.com/groups/SarniaTech/"><img src="assets/img/ch2.png" alt="twitter"></a>
+                    <a href="https://www.facebook.com/groups/SarniaTech/"><img src="assets/img/ch3.png" alt="facebook"></a>
 
-                    <h3 class="header-subtitle">The best place to see upcoming events is by joining our
-                        <span class="blue">Facebook</span> Group. If you would like to join the conversation then check out our Slack Group.
+                    <h3 class="header-subtitle">The best place to see upcoming events is by joining our <span class="blue">Facebook</span> Group.
+                        If you would like to join the conversation then check out our Slack Group. 
                         To get a slack invite and join our mailing list sign up to become a Sarnia Tech Community Member.
-                        If you would only like to receive emails about major events then become a Subscriber We also have
-                        a Google Drive where you can check out some of our collaboration docs. PS We take privacy very seriously.
-                        We will only use the information you provide to give you information about the Sarnia Tech Community.
+                        If you would only like to receive emails about major events then become a Subscriber
+                        We also have a Google Drive where you can check out some of our collaboration docs.
+                        PS We take privacy very seriously. We will only use the information you provide to give you information about 
+                        the Sarnia Tech Community.
                         PPS You can unsubscribe or change your email preferences at any time.
                     </h3>
                     <a href="" class="button header-button2">Go to Facebook</a>
                 </div>
-                <div class="column">
-                    <img src="assets/img/main-img2.png" alt="meetings">
+                <div class="column facebook">
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs=timeline&width=300&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
                 </div>
             </div>
         </div>
@@ -131,10 +103,9 @@
     <section class="is-large" id="family-section">
         <div class="container is-centered">
             <h2 class="header-title">Friends and Family</h1>
-                <h3 class="header-subtitle">Sarnia Tech Community is a friend and follower of SLLUG (Sarnia Lambton Linux Users Group) Go check out SLLUG’s
-                    Website.
-                </h3>
-                <a href="" class="button header-button3">Go to SLLUG</a>
+            <h3 class="header-subtitle">Sarnia Tech Community is a friend and follower of SLLUG (Sarnia Lambton Linux Users Group) Go check out SLLUG’s Website.
+            </h3>
+            <a href="" class="button header-button3">Go to SLLUG</a>
         </div>
     </section>
     <!-- Friend and Family Area END -->
@@ -145,7 +116,7 @@
         <div class="container">
             <div class="content has-text-centered">
                 <p>
-                    Privacy | Terms of Use | Client Rights and Responsibility. © 2017 copyright, All rights reserved
+                    Privacy    |    Terms of Use    |    Client Rights and Responsibility. © 2017 copyright, All rights reserved
                 </p>
             </div>
         </div>
