Added media queries for smaller devices

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@
         <nav class="mobile">
             <img src="assets/img/menu.png" alt="menu">
         </nav>
-        <h1><img src="assets/img/logo.png" alt="logo"></h1>
+        <img src="assets/img/logo.png" alt="logo">
     </section>
     <!-- Navi Area END -->
     
